# hotaru-fund

./: .gitignore  GEMINI.MD  VERSION_LOG.md  build_all.sh  ecosystem.config.js  requirements.txt
apps/hotaru-analyzer/: Cargo.toml
apps/hotaru-analyzer/src/: main.rs
apps/hotaru-brain/: main.py
apps/hotaru-brain/core/: brain_engine.py  learning_engine.py  logger.py  models.py  service_clients.py
apps/hotaru-engine/: Cargo.toml
apps/hotaru-engine/src/: main.rs  temp_last_part.rs
apps/hotaru-monitor/: monitor_profit.py
apps/hotaru-news-sentry/: Cargo.toml
apps/hotaru-news-sentry/src/: main.rs
apps/hotaru-oracle/: Cargo.toml
apps/hotaru-oracle/src/: main.rs
apps/hotaru-scraper/: Cargo.toml
apps/hotaru-scraper/src/: main.rs
apps/hotaru-vision/: main.py
apps/hotaru-vision/core/: binance_api.py  technical_calc.py
data/: paper_state.json
docs/memory/: HOTARU-SOUL.md  LESSONS-LEARNED.md  RESEARCH-LOG.md  System-Connection.md  TRADING-STRATEGY.md
