[package]
name = "hotaru-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.33", features = ["bundled"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] } # 🚀 เพิ่มอาวุธใหม่!
