[package]
name = "hotaru-news-sentry"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
feed-rs = "1.5" # 🚀 Library สำหรับอ่าน RSS/Atom ที่เร็วที่สุด
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10" # 🔍 สำหรับทำ Fast Keyword Matching
